--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,22 @@
 results:
   -
-    provision_time: 1m 11s
+    provision_time: 0m 38s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-7
+    PS_UUID: 22141bf0-fa24-11e8-84c4-ff73b5b78984
+  - provision_time: 1m 11s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
