--- a/results.yaml
+++ b/results.yaml
@@ -26,6 +26,33 @@ results:
       # Fails
     author: null
     timestamp: '2018-12-10'
+    PS_UUID: e8a1ec60-fc96-11e8-ac86-1b10100da0ba
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Move device between applications
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 11
+      - pass: 11
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-12-10'
     PS_UUID: 861440f0-fc8e-11e8-8128-696f71e037e8
   - provision_time: 0m 56s
     image_size: 1724 Mb
