--- a/results.yaml
+++ b/results.yaml
@@ -25,6 +25,33 @@ results:
 
       # Fails
     author: null
+    timestamp: '2018-12-11'
+    PS_UUID: f3f4ce50-fcd9-11e8-a024-ed6f223565f4
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Move device between applications
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 11
+      - pass: 11
+      - fail: 0
+
+      # Fails
+    author: null
     timestamp: '2018-12-10'
     PS_UUID: 951d7420-fcd1-11e8-8674-a1492652300c
   - provision_time: 1m 7s
