--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/balena-io/balena-tests",
   "dependencies": {
+    "af": "0.0.2",
     "ajv": "^6.5.0",
     "balena-sdk": "^11.0.0",
     "balena-sync": "^10.0.0",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
-    "data-store": "^3.0.0",
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
     "firmata": "^0.19.1",
@@ -39,10 +39,10 @@
     "make-runnable": "^1.3.6",
     "mountutils": "^1.2.0",
     "node-ssh": "^5.1.2",
+    "npm": "^6.5.0",
     "pensieve-sdk": "^1.0.0",
     "progress-stream": "^2.0.0",
     "randomstring": "^1.1.5",
-    "request-promise": "^4.2.2",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
     "resin-semver": "^1.4.0",
@@ -51,8 +51,7 @@
     "string-to-stream": "^1.1.1",
     "symbols": "0.0.6",
     "tap": "^12.0.1",
-    "tap-parser": "^7.0.0",
-    "winston": "^3.1.0"
+    "tap-parser": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
