--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ajv": "^6.5.0",
     "balena-sdk": "^11.0.0",
+    "balena-cli": "^9.0.0",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
     "data-store": "^3.0.0",
