--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "balena-sync": "^10.0.0",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
-    "drivelist": "^5.0.22",
-    "etcher-image-write": "^9.1.3",
+    "etcher-sdk": "^1.3.12",
     "firmata": "^0.19.1",
     "fs-extra": "^3.0.1",
     "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
     "lodash": "^4.17.10",
-    "mountutils": "^1.2.0",
+    "mz": "^2.7.0",
     "node-ssh": "^5.1.2",
     "npm": "^6.5.0",
     "pensieve-sdk": "^1.0.0",
