Restore worker release env var
This env var is still used by the leviathan-worker project
for e3e tests against draft worker releases.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,7 @@
     {
       "fileMatch": ["(^|/)(?:docker-)?compose[^/]*\\.ya?ml$"],
       "matchStrings": [
-        "bh.cr/balena/leviathan-worker(-[^/]+)?/(?<currentValue>.*?)\\n"
+        "{WORKER_RELEASE:-(?<currentValue>.*?)}"
       ],
       "depNameTemplate": "balena-os/leviathan-worker",
       "datasourceTemplate": "github-tags",
