renovate: Remove v prefix from leviathan-worker github-tags
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
       "matchStrings": ["{WORKER_RELEASE:-(?<currentValue>.*?)}"],
       "depNameTemplate": "balena-os/leviathan-worker",
       "datasourceTemplate": "github-tags",
-      "versioningTemplate": "semver-coerced"
+      "extractVersionTemplate": "^v(?<version>.*)$"
     }
   ]
 }
